--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,14 @@ body {
     display: none;
   }
 }
+@media (max-width: 1100px) {
+  #menu {
+    display: none;
+  }
+  #main-logo {
+    display: none;
+  }
+}
 
 #mobile-menu {
   
@@ -193,7 +201,7 @@ body {
   color: black;
   text-decoration: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 1100px) {
   #mobile-menu {
     display: none;
   }
@@ -282,6 +290,9 @@ a.menuItem:hover {
   font-size: 14px;
   line-height: 1.7;
   margin-bottom: 25px;
+
+  height: 100px;
+  text-overflow: ellipsis;
 }
 
 .huge-center-title {
@@ -596,6 +607,15 @@ background: linear-gradient(90deg, rgba(249,219,189,1) 46%, rgba(255,255,255,1) 
   background-color: #000000;
   margin-right: 8px;
   content: ' ';
+}
+@media (max-width: 768px) {
+  #project-paragraphs li::before {
+    left: 15px;
+  }
+  .left-project-section {
+    display: block;
+    text-align: center;
+  }
 }
 #more-projects-link {
   display: inline-block;
