--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ body {
 
 #floating-menu {
   background-color: blue;
+  background-color: #007FFA;
   padding: 15px 50px;
   position: fixed;
   top: 0;
@@ -383,6 +384,14 @@ a.menuItem:hover {
   cursor: pointer;
   letter-spacing: 0px;
 }
+#industrial-partners-touch-button  a, #industrial-partners-touch-button  a:hover ,#industrial-partners-touch-button  a:active{
+  color: white;
+  text-decoration: none;
+}
+#industrial-partners-touch-button-for-projects   a, #industrial-partners-touch-button-for-projects   a:hover ,#industrial-partners-touch-button-for-projects a:active{
+  color: white;
+  text-decoration: none;
+}
 #industrial-partners-touch-button-for-projects {
   background-color: #4054B2;
   font-family: "Roboto", Sans-serif;
@@ -619,11 +628,12 @@ background: linear-gradient(90deg, rgba(249,219,189,1) 46%, rgba(255,255,255,1) 
 }
 #more-projects-link {
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid #007FFA;
   padding: 8px 50px;
+  background-color: #007FFA;
 }
 #more-projects-a, #more-projects-a:hover, #more-projects-a:active {
-  color: black;
+  color: white;
 }
 
 
