--- a/src/App.css
+++ b/src/App.css
@@ -282,6 +282,7 @@ a.menuItem:hover {
   letter-spacing: 1px;
   margin-bottom: 25px;
   margin-top: 20px;
+  min-height: 60px;
 }
 
 .card-content {
